--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,4 @@ jobs:
         run: npm install --global surge
 
       - name: Publicar pagina
-        run: surge --project ./ --domain ${{ secrets.SURGE_DOMAIN }} --token ${{ secrets.SURGE_API_KEY }}
+        run: surge --project ./ --domain ${{ parcial1electiva.surge.sh}} --token ${{ 417a2319c57c907bfab5b0016e079b77 }}
